tests/expected_output/expression_is_not_assignable/000000-clang-13.0-x86_64-pc-linux-gnu.txt
tests/extracted_compile_time_errors/expression_is_not_assignable.c:2:26: error: expression is not assignable
    if (argc = 1 || argc = 2) {
               ~~~~~~~~~ ^
dcc explanation: you are using = incorrectly perhaps you meant ==.
Reminder: you use = to assign to a variable.
You use == to compare values.
        
